add set -x to debug

--- a/.github/workflows/build-ocp.yml
+++ b/.github/workflows/build-ocp.yml
@@ -875,7 +875,7 @@ jobs:
         run: |
           set -e
           set -o pipefail
-
+          set -x
           micromamba activate build-ocp
 
           cd OCP
