--- a/.github/workflows/build-ocp.yml
+++ b/.github/workflows/build-ocp.yml
@@ -33,7 +33,7 @@ jobs:
     steps:
       - name: Build SDKs
         id: build-sdks
-        uses: ./.github/actions/build-sdks
+        uses: ../.github/actions/build-sdks
         with:
           os: ${{ matrix.os }}
           python-version: ${{ matrix.python-version }}
@@ -44,7 +44,7 @@ jobs:
           sed-i: "sed -i"
           shells: "bash"
 
-  sdks-native:
+  sdks-win-mac:
     name: Build OCCT SDK for ${{ matrix.python-version }} on ${{ matrix.os }} (${{ matrix.use-vtk }})
     runs-on: ${{ matrix.os }}
     strategy:
@@ -77,7 +77,7 @@ jobs:
     steps:
       - name: Build SDKs
         id: build-sdks
-        uses: ./.github/actions/build-sdks
+        uses: ../.github/actions/build-sdks
         with:
           os: ${{ matrix.os }}
           python-version: ${{ matrix.python-version }}
@@ -98,6 +98,7 @@ jobs:
   sources:
     name: Build OCP source on ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
+    needs: [sdks-ubuntu, sdks-win-mac]
 
     strategy:
       fail-fast: false
@@ -118,7 +119,7 @@ jobs:
     steps:
       - name: Build or download OCP Source
         id: build-ocp-source
-        uses: ./.github/actions/build-ocp-source
+        uses: ../.github/actions/build-ocp-source
         with:
           os: ${{ matrix.os }}
           python-version: ${{ matrix.python-version }}
@@ -134,6 +135,8 @@ jobs:
     container:
       image: ubuntu:20.04
       options: --name ci-ubuntu-20  # needed for manylinux_3_31
+    needs: sources
+
     strategy:
       fail-fast: false
       matrix:
@@ -144,7 +147,7 @@ jobs:
     steps:
       - name: Build OCP
         id: build-ocp
-        uses: ./.github/actions/build-ocp
+        uses: ../.github/actions/build-ocp
         with:
           os: ${{ matrix.os }}
           python-version: ${{ matrix.python-version }}
@@ -158,7 +161,7 @@ jobs:
           env: "DUMMY=0"
           ocp_tag: "ubuntu-22.04"
 
-  ocp-native:
+  ocp-win-mac:
     name: Build OCP for ${{ matrix.python-version }} on ${{ matrix.os }} (${{ matrix.use-vtk }})
     runs-on: ${{ matrix.os }}
     strategy:
@@ -196,7 +199,7 @@ jobs:
     steps:
       - name: Build OCP
         id: build-ocp
-        uses: ./.github/actions/build-ocp
+        uses: ../.github/actions/build-ocp
         with:
           os: ${{ matrix.os }}
           python-version: ${{ matrix.python-version }}
@@ -217,6 +220,7 @@ jobs:
   tests:
     name: Test OCP on ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
+    needs: [ocp-ubuntu, ocp-win-mac]
 
     strategy:
       fail-fast: false
@@ -240,7 +244,7 @@ jobs:
     steps:
       - name: Test OCP
         id: test-ocp
-        uses: ./.github/actions/test-ocp
+        uses: ../.github/actions/test-ocp
         with:
           os: ${{ matrix.os }}
           python-version: ${{ matrix.python-version }}
