--- a/.github/workflows/build-ocp.yml
+++ b/.github/workflows/build-ocp.yml
@@ -33,7 +33,7 @@ jobs:
     steps:
       - name: Build SDKs
         id: build-sdks
-        uses: ../actions/build-sdks
+        uses: ./.github/actions/build-sdks
         with:
           os: ${{ matrix.os }}
           python-version: ${{ matrix.python-version }}
@@ -77,7 +77,7 @@ jobs:
     steps:
       - name: Build SDKs
         id: build-sdks
-        uses: ../actions/build-sdks
+        uses: ./.github/actions/build-sdks
         with:
           os: ${{ matrix.os }}
           python-version: ${{ matrix.python-version }}
@@ -119,7 +119,7 @@ jobs:
     steps:
       - name: Build or download OCP Source
         id: build-ocp-source
-        uses: ../actions/build-ocp-source
+        uses: ./.github/actions/build-ocp-source
         with:
           os: ${{ matrix.os }}
           python-version: ${{ matrix.python-version }}
@@ -147,7 +147,7 @@ jobs:
     steps:
       - name: Build OCP
         id: build-ocp
-        uses: ../actions/build-ocp
+        uses: ./.github/actions/build-ocp
         with:
           os: ${{ matrix.os }}
           python-version: ${{ matrix.python-version }}
@@ -199,7 +199,7 @@ jobs:
     steps:
       - name: Build OCP
         id: build-ocp
-        uses: ../actions/build-ocp
+        uses: ./.github/actions/build-ocp
         with:
           os: ${{ matrix.os }}
           python-version: ${{ matrix.python-version }}
@@ -244,7 +244,7 @@ jobs:
     steps:
       - name: Test OCP
         id: test-ocp
-        uses: ../actions/test-ocp
+        uses: ./.github/actions/test-ocp
         with:
           os: ${{ matrix.os }}
           python-version: ${{ matrix.python-version }}
