--- a/.github/workflows/build-ocp.yml
+++ b/.github/workflows/build-ocp.yml
@@ -31,6 +31,10 @@ jobs:
         python-version: ["3.13"]
         use-vtk: ["vtk", "novtk"]
     steps:
+      - name: Install ca-certificates
+        run: |
+          apt-get update
+          apt-get install -y --no-install-recommends ca-certificates    
       - uses: actions/checkout@v4
       - name: Build SDKs
         id: build-sdks
@@ -119,6 +123,11 @@ jobs:
           #   sed-i: "sed -i"
 
     steps:
+      - name: Install ca-certificates
+        if: runner.os  == "Linux"
+        run: |
+          apt-get update
+          apt-get install -y --no-install-recommends ca-certificates
       - uses: actions/checkout@v4
       - name: Build or download OCP Source
         id: build-ocp-source
@@ -148,6 +157,10 @@ jobs:
         python-version: ["3.13"]
         use-vtk: ["vtk", "novtk"]
     steps:
+      - name: Install ca-certificates
+        run: |
+          apt-get update
+          apt-get install -y --no-install-recommends ca-certificates    
       - uses: actions/checkout@v4
       - name: Build OCP
         id: build-ocp
@@ -248,6 +261,11 @@ jobs:
             sed-i: "sed -i"
 
     steps:
+      - name: Install ca-certificates
+        if: runner.os  == "Linux"
+        run: |
+          apt-get update
+          apt-get install -y --no-install-recommends ca-certificates    
       - uses: actions/checkout@v4
       - name: Test OCP
         id: test-ocp
