make env cache unique

--- a/.github/actions/build-ocp/action.yml
+++ b/.github/actions/build-ocp/action.yml
@@ -48,7 +48,8 @@ runs:
         init-shell: ${{ inputs.shells }}
         cache-downloads: true
         cache-environment: true
-        cache-environment-key: environment-${{ env.OCP }}
+        cache-environment-key: environment-${{ inputs.python-version }}-%{{ inputs-os }}-${{ inputs.use-vtk }}
+
         
     # - - -
 
