--- a/.github/actions/test-ocp/action.yml
+++ b/.github/actions/test-ocp/action.yml
@@ -18,6 +18,18 @@ runs:
   using: "composite"
   steps:
     - uses: actions/checkout@v4
+    
+    # - - -
+
+    - name: Set up Python ${{ inputs.python-version }} via micromamba
+      uses: mamba-org/setup-micromamba@v2
+      with:
+        environment-file: environment-${{ inputs.python-version }}.yml
+        log-level: warning
+        init-shell: ${{ inputs.shells }}
+        cache-downloads: true
+        cache-environment: true
+        cache-environment-key: environment-${{ inputs.python-version }}-%{{ inputs-os }}-${{ inputs.use-vtk }}
 
     # - - -
 
