--- a/.github/actions/build-ocp/action.yml
+++ b/.github/actions/build-ocp/action.yml
@@ -69,11 +69,11 @@ runs:
       if: runner.os == 'Linux'
       shell: bash -l {0}
       run: |
-        sudo apt-get update
+        apt-get update
         # do not use freeimage freetype fontconfig from anaconda. Prevents from manylinux_2_31_x86_64 wheel
-        sudo apt-get install -y mesa-common-dev libegl1-mesa-dev libgl1-mesa-dev \
-                                libglu1-mesa-dev freeglut3-dev libxcursor-dev \
-                                libfreeimage-dev libfreetype-dev libfontconfig-dev
+        apt-get install -y mesa-common-dev libegl1-mesa-dev libgl1-mesa-dev \
+                           libglu1-mesa-dev freeglut3-dev libxcursor-dev \
+                           libfreeimage-dev libfreetype-dev libfontconfig-dev
 
     # - - -
 
