remove sudo in linux containers (2)

--- a/.github/actions/build-sdks/action.yml
+++ b/.github/actions/build-sdks/action.yml
@@ -88,10 +88,10 @@ runs:
       shell: bash -l {0}
       run: |
         # do not use freeimage freetype fontconfig from anaconda. Prevents from manylinux_2_31_x86_64 wheel
-        sudo apt-get update
-        sudo apt-get install -y mesa-common-dev libegl1-mesa-dev libgl1-mesa-dev \
-                                libglu1-mesa-dev freeglut3-dev libxcursor-dev \
-                                libfreeimage-dev libfreetype-dev libfontconfig-dev
+        apt-get update
+        apt-get install -y mesa-common-dev libegl1-mesa-dev libgl1-mesa-dev \
+                           libglu1-mesa-dev freeglut3-dev libxcursor-dev \
+                           libfreeimage-dev libfreetype-dev libfontconfig-dev
 
     # - - -
 
