--- a/.github/workflows/build-vtk.yml
+++ b/.github/workflows/build-vtk.yml
@@ -72,7 +72,7 @@ jobs:
         shell: bash -l {0}
         if: runner.os == 'Linux'
         run: |
-          sudo apt install -y build-essential cmake mesa-common-dev mesa-utils freeglut3-dev python3-dev python3-venv git-core ninja-build cmake wget libglvnd0 libglvnd-dev
+          apt install -y build-essential cmake mesa-common-dev mesa-utils freeglut3-dev python3-dev python3-venv git-core ninja-build cmake wget libglvnd0 libglvnd-dev
 
       - name: (Mac) MacOS Deps # 13 and 14
         shell: bash -l {0}
